<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/inputMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_money"
        android:inputType="number"/>
    <EditText
        android:id="@+id/inputInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/info_payment" />
    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok" />
    <CheckBox
        android:id="@+id/bankCardChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkb_card"/>
    <CheckBox
        android:id="@+id/mobilePhoneChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkb_phone"/>
    <CheckBox
        android:id="@+id/cashAddressChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkb_address"/>
</LinearLayout>